force-app/src/objects/ffr__ReportingDefinition__c.object
<CustomObject>
    <customHelpPage>ffr__helpreportingdefinition</customHelpPage>
    <fields>
        <fullName>ffr__AllowExpandCollapse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Expand and Collapse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__CompanyLogo__c</fullName>
        <label>Logo Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__Description__c</fullName>
        <label>Description</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffr__DisplayCurrencySymbol__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Currency Symbol</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__DisplayPrompts__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Display Prompts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__ExcelTemplate__c</fullName>
        <label>Excel Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__Logo__c</fullName>
        <formula>IF(LEN(ffr__CompanyLogo__c)=0,&quot;&quot;, IMAGE(&quot;/resource/ReportingUserImages/&quot;+ffr__CompanyLogo__c,&quot;Reporting Definition Logo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__PrintChatterFeed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Print Chatter Feed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__PrintStyleSheet__c</fullName>
        <label>Print Style Sheet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__ReportingDrillDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Drill Definition</label>
        <referenceTo>ffr__ReportingDefinition__c</referenceTo>
        <relationshipLabel>Reporting Definitions</relationshipLabel>
        <relationshipName>Reporting_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__ReportingTemplate__c</fullName>
        <label>Reporting Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__StyleSheet__c</fullName>
        <label>View Style Sheet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__Title__c</fullName>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <label>Reporting Definition</label>
    <listViews>
        <fullName>ffr__All</fullName>
        <columns>NAME</columns>
        <columns>ffr__Title__c</columns>
        <columns>ffr__Description__c</columns>
        <columns>ffr__ReportingTemplate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ffr__PrintStyleSheet__c</columns>
        <columns>ffr__StyleSheet__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Reporting Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>